Реализация очереди и дека

--- a/Queue/Queue.csproj
+++ b/Queue/Queue.csproj
@@ -43,14 +43,19 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Model\ArrayQueue.cs" />
+    <Compile Include="Model\DuplexItem.cs" />
+    <Compile Include="Model\DuplexLinkedDeque.cs" />
+    <Compile Include="Model\EasyDeque.cs" />
+    <Compile Include="Model\EasyQueue.cs" />
+    <Compile Include="Model\Item.cs" />
+    <Compile Include="Model\LinkedQueue.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
   </ItemGroup>
-  <ItemGroup>
-    <Folder Include="Model\" />
-  </ItemGroup>
+  <ItemGroup />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
